<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/scroll" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:background="@color/material_dynamic_neutral90"
            android:textSize="50sp">

        </TextView>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_reset"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_percent"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_delete"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_multiply"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_7"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_8"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_9"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_divide"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_4"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_5"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_6"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_plus"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_1"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_2"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_3"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_minus"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_0"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_point"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:backgroundTint="@color/cardview_dark_background"
            android:textColor="@color/material_dynamic_neutral_variant100"
            android:text="@string/_equals"
            android:textSize="@dimen/button_text" />

    </GridLayout>


</FrameLayout>